Clean up the code.  Using zList.php to handle the manipulation of the lists. Update taskerProject.php and taskerTask.php to use zList.php instead of doing the same things in each file. Updated the command parsing to handle task commands. Updated the commands to avoid special characters and conflicts. Added a and e commands for tasks. Added Project h, d, and v commands for visibility. Added s status command for tasks. Added o command for sort order for project and task lists. Added sorting to the project and task list.

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ form
 
 p
 {
+   margin-bottom:       var(--paraMargin);
    font-size:           1rem;
 }
 
